// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application Routing Test Route VisualTez - 404 1`] = `
<main
  class="flex flex-col flex-1"
>
  <div
    class="flex-1 flex flex-col md:flex-row justify-center items-center"
  >
    <h1
      class="text-[4rem] md:text-[20rem] italic font-black tracking-widest diagonal-fractions"
    >
      404
    </h1>
    <p>
      Page 
      <b
        class="italic tracking-wider"
      >
        /
      </b>
       does not exist!
    </p>
  </div>
</main>
`;

exports[`Application Routing Test Route VisualTez - Contact 1`] = `
<main
  class="flex flex-col flex-1"
>
  <div
    class="prose dark:prose-invert md:prose-2xl container mx-auto pt-24 pb-24 pl-5 pr-5"
  >
    <p>
      contact.md
    </p>
  </div>
</main>
`;

exports[`Application Routing Test Route VisualTez - Nodes 1`] = `
<main
  class="flex flex-col flex-1"
>
  <div
    class="flex-1 inline-flex flex-row justify-center items-center flex-wrap container m-auto p-5"
  />
</main>
`;

exports[`Application Routing Test Route VisualTez - Privacy 1`] = `
<main
  class="flex flex-col flex-1"
>
  <div
    class="prose dark:prose-invert md:prose-2xl container mx-auto pt-24 pb-24 pl-5 pr-5"
  >
    <p>
      privacy.md
    </p>
  </div>
</main>
`;

exports[`Application Routing Test Route VisualTez - Terms 1`] = `
<main
  class="flex flex-col flex-1"
>
  <div
    class="prose dark:prose-invert md:prose-2xl container mx-auto pt-24 pb-24 pl-5 pr-5"
  >
    <p>
      terms.md
    </p>
  </div>
</main>
`;

exports[`Application Routing Test Route VisualTez 1`] = `
<main
  class="flex flex-col flex-1"
>
  <div
    class="pt-20 pb-20"
  >
    <div
      class="container px-3 mx-auto flex flex-wrap flex-col lg:flex-row items-center justify-evenly"
    >
      <div
        class="flex flex-col w-full md:w-4/5 lg:w-2/5 justify-center items-center lg:items-start text-center md:text-left"
      >
        <p
          class="uppercase tracking-loose w-full"
        >
          About the Project
        </p>
        <h1
          class="my-4 text-5xl font-bold leading-tight w-full"
        >
          VisualTez
        </h1>
        <p
          class="leading-normal text-2xl mb-8"
        >
          A visual programming tool for writing smart contracts in the Tezos blockchain.
        </p>
        <div
          class="inline-flex spacing-2"
        >
          <a
            href="/editor"
          >
            <button
              class="h-14 inline-flex items-center px-4 text-sm lg:text-lg bg-black dark:bg-white text-white dark:text-black font-bold rounded-full shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out"
            >
              Open Editor
            </button>
          </a>
          <a
            class="h-14 inline-flex items-center px-4 text-sm lg:text-lg bg-black dark:bg-white text-white dark:text-black font-bold rounded-full shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out ml-2"
            href="/docs"
            target="_blank"
          >
            Documentation
          </a>
        </div>
      </div>
      <div
        class="flex justify-center h-full w-full md:w-4/5 lg:w-2/5 py-6 text-center"
      >
        <img
          alt="example"
          class="h-full w-full"
          src="/assets/sample.svg"
        />
      </div>
    </div>
  </div>
</main>
`;
